# bloop

./: .gitattributes  .gitignore  .prettierrc  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64v8  LICENSE  README.md  build.rs  cross-compile.sh  install.sh  package.json  project.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: android.yml  core.yml  editor.yml  frontend.yml  ios.yml  rust.yml  set-version.yml  tag-on-version-merge.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  bloop_jni.c
api/: bloop.proto
backend/: Dockerfile  README.md  backup.sh  clean.sh  fly.toml  pb_schema.json  start.sh
backend/pb_data_backup/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
backend/pb_public/.well-known/: apple-app-site-association
core/: Cargo.toml  README.md  build.rs  cbindgen.toml
core/.cargo/: config.toml
core/src/: config.rs  core.rs  logger.rs  main.rs
core/src/api/: request.rs  response.rs
core/src/audio/: controller.rs  convert.rs  devices.rs  mod.rs  process.rs  sampler_converter.rs  sequence.rs
core/src/backend/: auth.rs  backend.rs  filesystem_backend.rs  pocketbase.rs
core/src/control/: directories.rs  main.rs  mod.rs  project_store.rs  user_store.rs  waveform_store.rs
core/src/ffi/: mod.rs
core/src/generators/: names.rs
core/src/midi/: controller.rs  devices.rs  fallback.rs  matcher.rs  mod.rs
core/src/midi/mappings/: footctrl_bluetooth.rs  icon_g_boar.rs  mod.rs  sinco.rs
core/src/model/: action.rs  id.rs  mod.rs  playback_state.rs  project.rs  section.rs  song.rs
core/src/network/: mod.rs  server.rs
core/src/preferences/: audio.rs  midi.rs  mod.rs  switch.rs
core/src/samples/: cache.rs  sample.rs
core/src/switch/: fallback.rs  linux.rs  mod.rs
core/src/ui/: control.rs  icons.rs  message.rs  metronome.rs  mod.rs  power.rs  state.rs  theme.rs  transport.rs  view.rs
core/src/waveform/: data.rs  mod.rs
core/tests/: audio_device_integration_tests.rs  midi_devices_tests.rs  preferences_integration_tests.rs
core/tests/common/: mocketbase.rs
docs/: ANDROID_INSTALL.md  ANDROID_PORT_PLAN.md  AUDIO_DEVICE_PLAN.md  COLOR_SCHEME.md  MIDI_UPGRADE_PLAN.md  PREFERENCES.md  color-reference.html  raspberry-pi.md
editor/: .env  .gitignore  ERROR_NOTIFICATION_USAGE.md  README.md  buf.gen.yaml  index.html  package.json  tsconfig.json  vite.config.mts  vite.config.ts  vitest.config.ts
editor/src/: App.module.css  App.tsx  index.css  index.tsx  server.js
editor/src/api/: .gitignore  helpers.ts  project-helpers.ts  request.ts
editor/src/app/: Connection.tsx
editor/src/audio/: AudioController.ts  AudioControllerContext.ts  AudioMiddleware.ts  ProgressService.ts  (+1 more)
editor/tests/: README.md  TransportBar.test.tsx  TransportBarNoSelection.test.tsx  TransportBarProgress.test.tsx  backend-integration.test.ts  reducer.test.ts  setup.ts  test-backend.ts
frontend/src/: App.tsx  config.ts  index.css  index.tsx  styled.d.ts
ios/: .swift-format  Bloop-Bridging-Header.h  README.md  format.sh  lint.sh  version.sh
ios/Bloop.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile  Matchfile  README.md
ios/tests/: AudioDevicesTests.swift  BloopTests.swift  MidiDevicesTests.swift  PreferencesTests.swift  RequestTests.swift
ios/ui-tests/: BloopUITests.swift  BloopUITestsLaunchTests.swift
pedal/: DebouncedButton.h  InputStream.h  pedal.ino
scripts/: android-ar-wrapper.sh  android-clang-wrapper.sh  android-toolchain-path.sh  bloop.service  build-android.sh  build-api.sh  build-core-cross.sh  build-ios.sh  build-xcframework.sh  cross-compile.sh  install-certificate.sh  install.sh  jackd.service  prepare-ios.sh  project-builder.ts  release-ios.sh  reload-services.sh  set-version.sh  simple-project.json  tsconfig.json
src/: config.rs  core.rs  lib.rs  logger.rs  main.rs
src/api/: request.rs  response.rs
src/audio/: buffer.rs  command.rs  controller.rs  convert.rs  engine.rs  fade.rs  manager.rs  metronome.rs  mod.rs  notification.rs  periodic_notification.rs  pool.rs  preferences.rs  process.rs  sampler.rs  sampler_converter.rs  sequence.rs  sequence_generator.rs  sequencer.rs  timeline.rs
src/backend/: backend.rs  backend_sync.rs  filesystem_backend.rs  hybrid_backend.rs  mod.rs  pocketbase.rs  pocketbase_auth.rs  sync_backend.rs
src/control/: directories.rs  handlers.rs  main.rs  mod.rs  project_handlers.rs  project_store.rs  project_store_handlers.rs  sample_handlers.rs  transport_handlers.rs  waveform_store.rs  zip.rs
src/database/: database.rs
src/ffi/: mod.rs
src/generators/: channels.rs  colours.rs  mod.rs  names.rs  projects.rs  samples.rs  sections.rs  songs.rs
src/midi/: controller.rs  manager.rs  mod.rs
src/model/: action.rs  channel.rs  id.rs  mod.rs  notification.rs  playback_state.rs  progress.rs  project.rs  proxy.rs  sample.rs  section.rs  selections.rs  song.rs  state.rs  tempo.rs
src/network/: client.rs  error.rs  handlers.rs  manager.rs  mod.rs  server.rs
src/pedal/: controller.rs  mod.rs
src/preferences/: audio.rs  mod.rs  pedal.rs  switch.rs
src/samples/: cache.rs  mod.rs  sample.rs
src/server/: server.rs
src/switch/: linux.rs
src/types/: audio_file_format.rs  beats.rs  mod.rs
src/ui/: constants.rs  control.rs  icons.rs  message.rs  metronome.rs  mod.rs  project.rs  sections.rs  state.rs  transport.rs  view.rs
src/waveform/: data.rs  generate.rs  mod.rs
tests/: README.md  backend.rs  backend_sync_tests.rs  edit_project_integration_tests.rs  example_migration_test.rs  filesystem_backend_tests.rs  local_pocketbase_integration_test.rs  local_pocketbase_tests.rs  login.rs  login_tests.rs  projects.rs  projects_api_tests.rs  projects_integration_tests.rs
tests/common/: backend_fixture.rs  enhanced_integration_fixture.rs  integration_fixture.rs  local_pocketbase.rs  mod.rs
(+327 files in other folders)
