[package]
name = "bloop-core"
version = "0.1.0"
authors = ["Joe Noel <joe@joenoel.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
approx = "0.5.1"
bson = "2.13.0"
conv = "0.3.3"
cpal = { version = "0.15.2", features = ["jack"] }
fern = "0.7.1"
fixed = "1.27.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
home = "0.5.11"
hostname = "0.4.0"
hound = "3.5.1"
humantime = "2.1.0"
libmdns = "0.9.1"
log = "0.4.22"
midir = "0.10.1"
num-traits = "0.2.18"
rand = "0.8.5"
rawdio = { git = "https://github.com/joe-noel-dev/rawdio.git" }
regex = "1.11"
serde = { version= "1.0.217", features = ["derive"] }
serde_bytes = "0.11.14"
serde_derive = "1.0.126"
serde_json = "1.0.134"
serialport = "4.5.1" 
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-tungstenite = "0.24.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] } 

[package.metadata.deb]
maintainer = "Joe Noël <joe@joenoel.co.uk>"
depends = ["libc6 (>= 2.7)", "jackd"]
section = "sound"
assets = [
    ["target/release/bloop-core", "usr/bin/", "755"],
]