[package]
name = "bloop-core"
version = "0.6.0"
authors = ["Joe Noel <joe@joenoel.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
approx = "0.5.1"
async_zip = { version = "0.0.17", features = ["full"] }
cpal = { version = "0.15.2", features = ["jack"] }
fern = "0.7.1"
fixed = "1.29.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-lite = "2.6.0"
futures-util = "0.3.31" 
get_if_addrs = "0.5.3"
git-version = "0.3.9"
home = "0.5.11"
hostname = "0.4.0"
hound = "3.5.1"
humantime = "2.2.0"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "f8337b8da7ff6bcf876b54d1c7dac460d2e03747", features = ["advanced", "default", "tokio", "debug", "svg"], optional = true }
iced_native = { version = "0.10.3", optional = true }
log = "0.4.22"
mdns-sd = "0.13.5"
midir = { version = "0.10.1", optional = true }
num-traits = "0.2.18"
protobuf = "3.7.2"
rand = "0.9.0"
rawdio = { git = "https://github.com/joe-noel-dev/rawdio.git" }
regex = "1.11"
serde = { version= "1.0.217", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.140"
tempfile = "3.17.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.14"

[build-dependencies]
cbindgen = "0.28.0"
protobuf-codegen = "3.7.1"
protoc-rust = "2.28.0"

[lib]
name = "bloop"
crate-type = ["staticlib"]

[features]
default = ["ui", "midi"]
ui = [ "dep:iced", "dep:iced_native" ]
midi = [ "dep:midir" ]

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22.1"

[package.metadata.deb]
maintainer = "Joe Noël <joe@joenoel.co.uk>"
depends = ["libc6 (>= 2.7)", "jackd"]
section = "sound"
assets = [
    ["target/release/bloop-core", "usr/bin/", "755"],
]
