[package]
name = "bloop-core"
version = "0.9.0"
authors = ["Joe Noel <joe@joenoel.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
approx = "0.5.1"
async-trait = "0.1.88"
async_zip = { version = "0.0.17", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
cpal = { version = "0.16.0", features = ["jack"] }
fern = "0.7.1"
fixed = "1.29.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-lite = "2.6.1"
futures-util = "0.3.31" 
get_if_addrs = "0.5.3"
git-version = "0.3.9"
home = "0.5.11"
hostname = "0.4.0"
hound = "3.5.1"
humantime = "2.3.0"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "f8337b8da7ff6bcf876b54d1c7dac460d2e03747", features = ["advanced", "default", "tokio", "debug", "svg"], optional = true }
iced_native = { version = "0.10.3", optional = true }
log = "0.4.28"
mdns-sd = "0.13.11"
midir = { version = "0.10.2", optional = true }
num-traits = "0.2.18"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
rand = "0.9.2"
rawdio = { git = "https://github.com/joe-noel-dev/rawdio.git" }
regex = "1.11"
reqwest = { version = "0.12.23", features = ["json", "multipart", "stream"] }
serde = { version= "1.0.219", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.16"

[dev-dependencies]
env_logger = "0.11.8"
protobuf-json-mapping = "3.7.2"
wiremock = "0.6.5"

[build-dependencies]
cbindgen = "0.29.2"
protobuf-codegen = "3.7.1"
protoc-rust = "2.28.0"

[lib]
name = "bloop"
crate-type = ["staticlib", "rlib"]

[features]
default = ["ui", "midi"]
ui = [ "dep:iced", "dep:iced_native" ]
midi = [ "dep:midir" ]

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22.1"

[package.metadata.deb]
maintainer = "Joe Noël <joe@joenoel.co.uk>"
depends = ["libc6 (>= 2.7)", "jackd"]
section = "sound"
assets = [
    ["target/release/bloop-core", "usr/bin/", "755"],
]
